pruebas de cambio
para hacer test de el codigo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <aside>
             <div class="widget">
                 <h3 class="titulo">
-                    Articulos Destacados
+                    Articulo que te interesará
                 </h3>
                 <ul>
                     <li><a href="#">Lorem ipsum dolor sit amet</a></li>
